# rest

./: .gitignore  CHANGES.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
emmett_rest/: __init__.py  ext.py  helpers.py  parsers.py  rest.py  serializers.py  typing.py  wrappers.py
emmett_rest/openapi/: __init__.py  api.py  generation.py  helpers.py  mod.py  schemas.py
emmett_rest/openapi/assets/: description.md  stoplight.html
emmett_rest/queries/: __init__.py  errors.py  helpers.py  parser.py  validation.py
tests/: conftest.py  test_endpoints.py  test_endpoints_additional.py  test_envelopes.py  test_meta.py  test_queries.py
